// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput with no props renders snapshot 1`] = `
<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="css-textinput-1cwyjr8"
  data-focusable={true}
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onSelect={[Function]}
  readOnly={false}
  spellCheck={true}
  type="text"
/>
`;

exports[`TextInput with style prop renders snapshot 1`] = `
<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="css-textinput-1cwyjr8"
  data-focusable={true}
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onSelect={[Function]}
  readOnly={false}
  spellCheck={true}
  style={
    Object {
      "paddingBottom": "12px",
      "paddingLeft": "12px",
      "paddingRight": "12px",
      "paddingTop": "12px",
    }
  }
  type="text"
/>
`;
